# advent-of-code

./: .gitattributes  .gitignore  README.md
2015/1/: 1.py
2015/10/: Elves Look, Elves Say.py
2015/11/: Corporate Policy.py
2015/12/: JSAbacusFramework.io.py
2015/13/: Knights of the Dinner Table.py
2015/14/: Reindeer Olympics.py
2015/15/: Science for Hungry People.py
2015/16/: Aunt Sue.py
2015/17/: No Such Thing as Too Much.py
2015/18/: Like a GIF For Your Yard.py
2015/19/: Medicine for Rudolph.py
2015/2/: I Was Told There Would Be No Math.py
2015/20/: Infinite Elves and Infinite Houses.py
2015/21/: RPG Simulator 20XX.py
2015/22/: Wizard Simulator 20XX.py
2015/23/: Opening the Turing Lock.py
2015/24/: It Hangs in the Balance.py
2015/25/: Let It Snow.py
2015/3/: Perfectly Spherical Houses in a Vacuum.py
2015/5/: Doesn't He Have Intern-Elves For This.py
2015/6/: Probably a Fire Hazard.py
2015/7/: Some Assembly Required.py
2015/8/: Matchsticks.py
2015/9/: All in a Single Night.py
2016/: aoc-helper.ts  aoc-utils.ts
2016/solutions/: solutions.ts
2017/: 2017.sln
2017/Common/: Common.cs
2017/Day1/: Day1.cs  Day1.csproj  Program.cs  Resources.Designer.cs  Resources.resx
2017/Day10/: day10.py  sample
2017/Day11/: day11.py
2017/Day12/: day12.py
2017/Day13/: day13.py  input
2017/Day14/: day14.py
2017/Day15/: day15.py
2017/Day16/: day16.py  input
2017/Day1T/: UnitTest1.cs
2017/Day1Test/: Day1Test.csproj  UnitTest1.cs
2017/Day2/: Day2.csproj  Program.cs  Resources.Designer.cs  Resources.resx
2017/Day2T/: Day2T.csproj  Resources.Designer.cs  Resources.resx  UnitTest1.cs
2017/Day3/: Program.cs  Resources.Designer.cs  Resources.resx
2017/Day4/: Day4.cs
2017/Day5/: Day5.cs  Program.cs
2017/Day6/: day6.py
2017/Day7/: day7.py
2017/Day8/: day8.py
2017/Day9/: day9.py  sample
2017/day17/: Cargo.toml
2017/day18/: Cargo.toml
2017/day19/: Cargo.toml
2017/day20/: Cargo.toml
2017/day21/: Cargo.toml
2017/day22/: main.py  pyproject.toml
2017/day23/: Cargo.toml
2017/day24/: Cargo.toml
2018/: 1.py  2.py  2.txt  8.py
2018/day03/: Cargo.toml
2018/day04/: Cargo.toml
2018/day05/: Cargo.toml
2018/day06/: Cargo.toml
2018/day07/: Cargo.toml
2018/day08/: Cargo.toml
2018/day09/: Cargo.toml
2018/day10/: Cargo.toml
2018/day11/: Cargo.toml
2018/day12/: Cargo.toml
2018/day13/: Cargo.toml
2018/day15/: README.md  debug.txt  fixed.txt  out.txt  pom.xml
2018/day16/: README.md  pom.xml
2018/day17/: day17.py
2019/1/: The Tyranny of the Rocket Equation.py  input.txt
2019/10/: Monitoring Station.py
2019/11/: Space Police.py  input.txt  intcode.py
2019/12/: The N-Body Problem.py  input.txt
2019/13/: Care Package.py  intcode.py
2019/14/: 14.py
2019/15/: Oxygen System.py  intcode.py
2019/17/: Part2.py  Set and Forget.py  intcode.py  sol.txt
2019/18/: Many-Worlds Interpretation.py  example.json  example.txt  input.txt  pairs.json  pairs_1.json
2019/19/: Tractor Beam.py  intcode.py
2019/2/: ,.json  1202 Program Alarm.py
2019/20/: Donut Maze.py  input.txt  (+1 more)
2021/: Cargo.toml
2022/: Cargo.toml
2022/inputs/: day06.txt  day15.txt  day19.txt  day20.txt  day21.txt  day22.txt  day23.txt
2022/src/: aocutil.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs  test.py
2024-py/: pyproject.toml
2024-py/advent/: __init__.py  cli.py  day01.py  grid.py  index.py  pos.py  solution.py
2024-py/advent/solutions/: __template__  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
2024-rs/: .gitignore  Cargo.toml
2024-rs/src/: lib.rs  main.rs  template.txt
2024-rs/src/template/: mod.rs  runner.rs
2024-rs/src/template/commands/: solve.rs
(+241 files in other folders)
