[package]
name = "aoc"
version = "2022.1.0"
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
itertools = "0.10.0"
primes = "0.3.0"
rayon = "1.5"
cached = "0.26.2"
ahash = "0.7.6"
regex = "1.7.0"
