[package]
name = "aoc"
version = "2022.1.0"
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.20"
itertools = "0.13.0"
primes = "0.4.0"
rayon = "1.10.0"
cached = "0.53.1"
ahash = "0.8.11"
regex = "1.11.0"
