[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code-jeezeh"
dynamic = ["version"]
description = "JeeZeh's Python solutions for Advent of Code 2024 https://adventofcode.com/"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = ["advent-of-code-data >= 2.0.0"]

[[project.authors]]
name = "Jesse Ashmore"

[project.urls]
Homepage = "https://github.com/jeezeh/advent-of-code"

[project.scripts]
solve = "advent.plugin:solve"
aocj = "advent.cli:cli"

[project.entry-points."adventofcode.user"]
jeezeh = "advent.cli:solve"

[tool.ruff]
line-length = 120
target-version = "py313"
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "PGH003", # allow type: ignore (useful when Pylance is set to "strict")
]
